tests/error/wrong_arity.vow
// TEST: stderr "wrong argument count"
module WrongArity

fn foo(x: i64) -> i64 { x }

fn main() -> i32 { foo(1, 2); 0 }
